--- a/css/home_page_style.css
+++ b/css/home_page_style.css
@@ -55,7 +55,9 @@ body{
     transform: translate(-50%, -50%);
     width: 100%;
 }
-
+article{
+    margin:70px 0;
+}
 .container span {
     display: block;
 }
