--- a/css/signupdoctor.css
+++ b/css/signupdoctor.css
@@ -102,6 +102,9 @@ body{
     transform: translateY(160px);
     /* border: 2px teal transparent; */
 }
+article{
+    margin:70px 0
+}
 .form-control{
     display: flex;
     align-items: center;
@@ -152,6 +155,10 @@ box-shadow: 0px 7px 4px rgba(0,0,0,0.25);
     border-bottom: 2px solid rgb(132, 229, 241);
 }
 
+.form input:focus{
+    outline:none;
+    border-bottom:2px solid rgb(142, 236, 189)
+}
 
 @keyframes moveinleft {
     0%{
